[metadata]
url = https://github.com/penguinolog/sqlalchemy_jsonfield
author = Alexey Stepanov
author_email = penguinolog@gmail.com
classifiers =
    Development Status :: 4 - Beta

    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

    License :: OSI Approved :: Apache Software License

    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

keywords =
    sql
    sqlalchemy
    json
    jsonfield
    development

description = SQLALchemy JSONField implementation for storing dicts at SQL
long_description = file: README.rst
license = Apache License, Version 2.0

[options]
zip_safe = True
packages = find:
setup_requires =
    setuptools > 20.2
install_requires =
    sqlalchemy
python_requires = >=2.6,!=3.0.*,!=3.1.*,!=3.2.*

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[flake8]
exclude =
    .venv,
    .git,
    .tox,
    dist,
    doc,
    *lib/python*,
    *egg,
    build,
    __init__.py,
    docs
ignore =
show-source = True
count = True

[aliases]
test=pytest

[tool:pytest]
addopts = -vv --cov-config .coveragerc  --cov=sqlalchemy_jsonfield
