[metadata]
name = SQLAlchemy-JSONField
project_urls =
    Bug Tracker = https://github.com/penguinolog/sqlalchemy_jsonfield/issues

[options]
zip_safe = True
packages = find:

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[flake8]
exclude =
    .venv,
    .git,
    .tox,
    dist,
    doc,
    *lib/python*,
    *egg,
    build,
    __init__.py,
    docs
ignore =
    E203
# whitespace before ':'
show-pep8 = True
show-source = True
count = True
max-line-length = 120

[pydocstyle]
ignore =
    D401,
    D202,
    D203,
    D213
# First line should be in imperative mood; try rephrasing
# No blank lines allowed after function docstring
# 1 blank line required before class docstring
# Multi-line docstring summary should start at the second line

[aliases]
test=pytest

[tool:pytest]
addopts = -vv --cov-config .coveragerc  --cov=sqlalchemy_jsonfield
