[metadata]
project_urls =
    Bug Tracker = https://github.com/penguinolog/sqlalchemy_jsonfield/issues

long_description = file: README.rst

[options]
zip_safe = True
packages = find:

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal = 0

[easy_install]
zip_ok = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[flake8]
exclude =
  .venv,
  .git,
  .tox,
  dist,
  doc,
  *lib/python*,
  *egg,
  build,
  __init__.py,
  _version.py,
  docs
ignore =
  E203,
# whitespace before ':'
  W503,
# line break before binary operator
  D401,
# First line should be in imperative mood; try rephrasing
  D202,
# No blank lines allowed after function docstring
  D203,
# 1 blank line required before class docstring
  D213
# Multi-line docstring summary should start at the second line
show-pep8 = True
show-source = True
count = True
max-line-length = 120

[doc8]
max-line-length = 150

[aliases]
test = pytest

[mypy]
warn_unused_configs = True
warn_redundant_casts = True
show_error_context = True
show_column_numbers = True
pretty = True
